--- a/_posts/2018-04-13-content_disposition__setting__on__HTTP_header .textile
+++ b/_posts/2018-04-13-content_disposition__setting__on__HTTP_header .textile
@@ -1,7 +1,7 @@
 ---
--layout: post
--title: HTTP header의 content-disposition 설정
--categories: [server]
+layout: post
+title: HTTP header의 content-disposition 설정
+categories: server
 ---
 일반적인 HTTP 응답에서 Content-disposition 응답헤더의 defualt 설정은 inline이다.
 
